correction de style : Alignement des équipements du dropdown de la fiche logement sous forme de liste

--- a/src/styles/Dropdown.scss
+++ b/src/styles/Dropdown.scss
@@ -37,6 +37,10 @@
         color: black;
         padding: 1em;
         border-top: 1px solid rgb(255, 96, 96);
+        ul{
+            list-style-type: none;
+            padding: 0;
+        }
     }
 }
 
